--- a/res/scss/view/_settings-structure.scss
+++ b/res/scss/view/_settings-structure.scss
@@ -1,4 +1,4 @@
-	&.simple
+	&.simple, &.quick-tour
 	{
 		 .is-advanced
 		 {
@@ -51,6 +51,7 @@
 
 				// @todo probably something for icon left /right here.
 		}
+
 
 		menu { // left-hand menu.
 			 width: 25%;
