--- a/res/scss/elements/_icons.scss
+++ b/res/scss/elements/_icons.scss
@@ -7,7 +7,7 @@ $disabled:  'disabled.svg';
 $selected: 'selected.svg';
 
 
-$icons: alert, arrow-right, arrows-left-right, arrows-up-down, box-archive, bulk, cdn, dashboard, debug, delivery, exclusions, edit,  feedback, help, optimization, processing, notifications, tools, trash, webp_avif, photo, ok, warning, key, save, switch, help-circle;
+$icons: alert, arrow-right, arrows-left-right, arrows-up-down, box-archive, bulk, cdn, dashboard, debug, delivery, exclusions, edit, eye,  feedback, help, optimization, processing, notifications, tools, trash, webp_avif, photo, ok, warning, key, save, switch, help-circle;
 
 .shortpixel-icon
 {
