--- a/res/scss/view/_settings-exclusions.scss
+++ b/res/scss/view/_settings-exclusions.scss
@@ -4,25 +4,17 @@
 
   .exclude-thumbnail-setting
   {
-
-
-
-
     content
     {
-    //  display: grid;
-    //  grid-template-columns: 1fr 1fr 1fr;
-    //  grid-template-rows: 1fr 1fr 1fr;
-    //  column-gap: 5px;
-    //  grid-auto-flow: column;
+
       column-count: 3;
       column-width: 220px;
     > span {
        margin-right: 20px;
        white-space:nowrap;
        line-height: 24px;
-       float: left;
-       clear: both;
+      // float: left;
+    //   clear: both;
        font-size: 12px;
        color: $blue_closed;
        input { margin-right: 8px; }
@@ -57,22 +49,19 @@
     ul.exclude-list {
         min-height: 30px;
          li {
-      //      float: left;
             display: flex;
             justify-content: space-between;
             div {
-
             }
             width: 100%;
             box-sizing: border-box;
             border: 1px solid $blue_closed;
             padding: 4px 12px;
-          //  border: 1px solid #1caecb;
             background: #fff;
             border-radius: 8px;
             margin: 8px 8px 0 0;
-            //color: #fff;
             cursor: pointer;
+
             &.no-exclusion-item
             {
                cursor: default;
@@ -99,19 +88,24 @@
 
     .new-exclusion
     {
-    //		border-top: 1px solid #ccc;
-        border: 3px solid $blue_closed;
-      //  box-shadow: 2px 2px 1px #ccc;
+        border: 1px solid $blue_closed;
         padding: 16px 0;
-        margin: 0 16px;
         display: inline-block;
         background: #fff;
         position: relative;
         width: 100%;
 
+        .grid
+        {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          grid-template-rows: 1fr 1fr;
+        }
+
         h3 {
-            padding: 8px 0;
+            padding: 8px 16px;
             border-bottom: 1px solid $blue_open;
+            margin: 0;
         }
         +.new-exclusion-button
         {
@@ -127,6 +121,22 @@
            }
         }
 
+        .thumbnail-select
+        {
+           .thumbnail-options
+           {
+             column-count: 3;
+
+            // margin-right: 20px;
+          //   white-space:nowrap;
+            // line-height: 24px;
+          //   float: left;
+          //   clear: both;
+             font-size: 12px;
+             color: $blue_closed;
+           }
+        }
+
 
          div
         {
@@ -138,7 +148,7 @@
               display: inline-block;
            }
            input, select {
-              min-width: 250px;
+              //min-width: 250px;
               &.small {
                 width: 80px;
                 min-width: 0;
@@ -152,6 +162,10 @@
             // margin-left: 104px;
              min-width: 75px;
              padding: 8px 6px;
+             i {
+               width: 15px;
+               height: 15px;
+             }
              &[name="removeExclusion"]
              {
                 background: #ff0000;
