--- a/res/scss/view/_settings-overview.scss
+++ b/res/scss/view/_settings-overview.scss
@@ -50,10 +50,8 @@
        // Specific layout for top row boxes.
        &.top-row
        {
-
            .average-optimization
            {
-
              .opt-circle-average
              {
                 width: 150px;
@@ -62,10 +60,22 @@
                    dominant-baseline: central;
                 }
              }
-
-
            }
 
+           .rating {
+              display: flex;
+              justify-content: space-between;
+              width: 70%;
+              margin: 0 0 10px 0;
+              img {
+                width: 90px;
+              }
+              .button
+              {
+                 padding: 2px 8px;
+              }
+
+           }
        }
 
        // Specific layout for second row boxes
@@ -158,7 +168,9 @@
            }
            input {
               border: 1px solid #1ABDCA;
-              background: url('../images/icon/key.svg') no-repeat 1% center #fff;
+
+              background: url('../images/icon/key.svg') 1% center no-repeat;
+              background-color: #fff;
               padding-left: 30px;
               height: 36px;
            }
@@ -174,6 +186,16 @@
                  margin-right: 4px;
               }
 
+           }
+           .apifield
+           {
+               position: relative;
+               i {
+                  position: absolute;
+                  right: 3px;
+                  top: 5px;
+                  cursor: pointer;
+               }
            }
        }
     }
