--- a/res/scss/elements/_colors.scss
+++ b/res/scss/elements/_colors.scss
@@ -4,6 +4,7 @@ $color-dark: #1cbecb;
 $color-light: #d1f5fd;
 
 $color-brokenwhite: #F5F5F5;
+$color-grey: #D7D7D7;
 
 $blue_default: #1ABDCA;
 $blue_closed : #116C7E;
@@ -11,6 +12,10 @@ $blue_open :  #92D5E3;
 $blue_background: #F4FBFC;
 
 $black_default: #001E24;
+
+$green_highlight: #00C898;
+
+
 
 // https://angel-rs.github.io/css-color-filter-generator/
 $filter_black: brightness(0) saturate(100%);
